fix: horizontal scroll, padding, delete inline styles, add styles in styles.css

--- a/style.css
+++ b/style.css
@@ -1,21 +1,25 @@
-*{
+* {
   margin: 0;
   padding: 0;
+  /* smoth */
+  scroll-behavior: smooth;
 }
-.nv{
+.nv {
   position: sticky;
   top: 0;
   z-index: 1;
 }
-.foto{
+.foto {
   width: 220px;
   height: 250px;
   border-radius: 50%;
 }
-.card-img{
+
+.image-size {
+  width: 15rem;
+}
+
+.card-size {
   height: 150px;
   border-radius: 5px 5px 0 0;
-}
-.card{
-  padding: 0;
 }
